Finish onboarding flow, including user name and typing challenge

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -18,8 +18,8 @@
         android:id="@+id/nextBtn"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:onClick="finishTyping"
-        android:text="Go to Drunk-o-meter"
+        android:onClick="next"
+        android:text="text"
         app:layout_constraintBottom_toBottomOf="@id/onboardingContainer"
         tools:layout_editor_absoluteX="0
 " />
