--- a/app/src/main/res/layout/fragment_typing_challenge_intro.xml
+++ b/app/src/main/res/layout/fragment_typing_challenge_intro.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".OnboardingActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/typingChallengeIntroTitle"
@@ -23,4 +22,16 @@
         app:layout_constraintTop_toBottomOf="@id/typingChallengeIntroTitle"
         android:text="@string/typingChallengeIntroDescription"
         android:textColor="#000000" />
+
+    <Button
+        android:id="@+id/startTypingChallengeBtn"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:onClick="startTypingChallenge"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="0
+" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
