--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -33,4 +33,14 @@
         android:hint="name"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@id/usernameDescription" />
+
+    <Button
+        android:id="@+id/saveUsername"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:onClick="saveUsername"
+        android:text="Continue to drunk-o-meter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0
+" />
 </androidx.constraintlayout.widget.ConstraintLayout>
