--- a/app/src/main/res/layout/fragment_text_message_input.xml
+++ b/app/src/main/res/layout/fragment_text_message_input.xml
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:onClick="analyzeTextMessage"
-        android:text="Continue to drunk-o-meter"
+        android:text="Submit Text Message"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0
 " />
