--- a/app/src/main/res/layout/fragment_drunkometer_start.xml
+++ b/app/src/main/res/layout/fragment_drunkometer_start.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/DrunkometerStartTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/startDrunkometerAnalysis"
         android:layout_width="match_parent"
