--- a/app/src/main/res/layout/fragment_text_message_input.xml
+++ b/app/src/main/res/layout/fragment_text_message_input.xml
@@ -1,3 +1,52 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:fe5a192c860ce837d81ba1f174641b6c2eb245922825ae2bae8524663f7996d7
-size 2020
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".DrunkometerActivity">
+
+    <TextView
+        android:id="@+id/textMessageInputTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textMessageInputTitle"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/textMessageRecipientInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Recipient"
+        android:imeOptions="actionDone"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@id/textMessageInputTitle" />
+
+    <EditText
+        android:id="@+id/textMessageTextInput"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:padding="8dp"
+        android:background="#34BB86FC"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Type your message..."
+        android:inputType="textMultiLine"
+        app:layout_constraintTop_toBottomOf="@id/textMessageRecipientInput" />
+
+    <Button
+        android:id="@+id/analyzeTextMessage"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:onClick="analyzeTextMessage"
+        android:text="Submit Text Message"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0
+" />
+</androidx.constraintlayout.widget.ConstraintLayout>
