--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -1,3 +1,46 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:ad404142868cf3831bf8e221ba22cb32f0678aa110b7a9f7d24435d31f641d4f
-size 1760
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".OnboardingActivity">
+
+    <TextView
+        android:id="@+id/usernameTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/usernameTitle"
+        android:textColor="#000000"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/usernameDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/usernameTitle"
+        android:text="@string/usernameDescription"
+        android:textColor="#000000" />
+
+    <EditText
+        android:id="@+id/usernameInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="name"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@id/usernameDescription" />
+
+    <Button
+        android:id="@+id/saveUsername"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:onClick="saveUsername"
+        android:text="Continue to drunk-o-meter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0
+" />
+</androidx.constraintlayout.widget.ConstraintLayout>
