--- a/app/src/main/res/layout/fragment_drunkometer_start.xml
+++ b/app/src/main/res/layout/fragment_drunkometer_start.xml
@@ -13,6 +13,15 @@
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/selfieView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/DrunkometerStartTitle"
+        tools:ignore="MissingConstraints"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <Button
         android:id="@+id/startDrunkometerAnalysis"
         android:layout_width="match_parent"
