--- a/app/src/main/res/layout/fragment_text_message_intro.xml
+++ b/app/src/main/res/layout/fragment_text_message_intro.xml
@@ -46,7 +46,7 @@
                 android:gravity="center"
                 android:onClick="skipTextMessage"
                 android:text="@string/next_skipTextMessage"
-                android:textColor="@color/purple_500" />
+                android:textColor="@color/primary" />
         </FrameLayout>
 
             <Button
