--- a/app/src/main/res/layout/fragment_chat_item.xml
+++ b/app/src/main/res/layout/fragment_chat_item.xml
@@ -14,11 +14,11 @@
         android:layout_marginTop="10dp">
 
         <ImageView
-            android:id="@+id/chat_item_image"
+            android:id="@+id/chat_item_selfie"
             android:layout_width="200px"
             android:layout_height="200px"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/check" />
+            android:src="@drawable/defaultselfie" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -58,6 +58,14 @@
                 android:text="Content" />
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/chat_item_check"
+            android:layout_width="100px"
+            android:layout_height="100px"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/check" />
 
 
     </LinearLayout>
