--- a/app/src/main/res/layout/fragment_chat_detail_view.xml
+++ b/app/src/main/res/layout/fragment_chat_detail_view.xml
@@ -1,63 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".chat_list.ChatDetailViewFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fragment_chat_detail_view">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="16dp"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/chat_detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="80dp">
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/chat_detail_title"
+            style="@style/TextAppearance.Material3.TitleMedium"/>
+
+        <ImageView
+            android:id="@+id/chat_detail_selfie"
+            android:layout_width="300px"
+            android:layout_height="300px"
+            android:layout_gravity="center"
+            android:src="@drawable/defaultselfie"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/chat_detail_title"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/chat_detail_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/chat_detail_selfie"
+            style="@style/TextAppearance.Material3.BodyMedium"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/chat_detail_content">
 
             <TextView
-                android:id="@+id/chat_detail_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/chat_detail_title"
-                style="@style/TextAppearance.Material3.TitleMedium"/>
+                android:id="@+id/chat_detail_date"
+                style="@style/TextAppearance.Material3.BodySmall"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Date" />
 
             <TextView
-                android:id="@+id/chat_detail_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                app:layout_constraintTop_toBottomOf="@id/chat_detail_title"
-                style="@style/TextAppearance.Material3.BodyMedium"/>
+                android:id="@+id/chat_detail_time"
+                style="@style/TextAppearance.Material3.BodySmall"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:text="Time" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="15dp"
-                app:layout_constraintTop_toBottomOf="@id/chat_detail_content">
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/chat_detail_date"
-                    style="@style/TextAppearance.Material3.BodySmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Date" />
+        <TextView
+            android:id="@+id/chat_detail_safeToText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="Safe To Text"
+            style="@style/TextAppearance.Material3.BodyLarge"/>
 
-                <TextView
-                    android:id="@+id/chat_detail_time"
-                    style="@style/TextAppearance.Material3.BodySmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:text="Time" />
+    </LinearLayout>
 
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-</FrameLayout>
+    <Button
+        android:id="@+id/goToChatView"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_margin="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="goToChatView"
+        android:text="Back"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
